[BUGFIX] Slightly increase contrast for danger color

--- a/Resources/Public/Scss/bootstrap5/_variables.scss
+++ b/Resources/Public/Scss/bootstrap5/_variables.scss
@@ -22,7 +22,7 @@ $default:                           #eaebec !default;
 $success:                           #5cb85c !default;
 $info:                              #319fc0 !default;
 $warning:                           #f0ad4e !default;
-$danger:                            #d9534f !default;
+$danger:                            #d4403a !default;
 $lighter:                           $gray-100 !default;
 $light:                             $gray-200 !default;
 $dark:                              $gray-800 !default;
